test/spec_vectors/simd_i32x4_arith2/fail/module_20.wat
(module (func $i32x4.min_u-1st-arg-empty (result v128) (i32x4.min_u (v128.const i32x4 0 0 0 0))))